--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
     
-    <title>Document</title>
+    <title>Chúc mừng năm mới</title>
 </head>
 <body>
     <h1 id="text">HAPPY NEW YEAR</h1>
